--- a/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.html
@@ -1,27 +1,63 @@
-<div class="card">
-
-    <div class="card-head">
-      <img src="https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/chip.png" alt="">
-      <img src="https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/visa.png" alt="">
+<section>
+  <h5>PRODUCT HISTORY</h5>
+  <div class="cardContainer">
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>Smartcard Package Update History</strong> </div>
     </div>
-  
-    <div class="card-no">
-      <span>6070</span>
-      <span>4852</span>
-      <span>3256</span>
-      <span>4567</span>
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>Combo Package Update History</strong> </div>
     </div>
-  
-    <div class="card-dtl">
-      <div>
-        <span>Card Holder</span>
-        <p>John Doe</p>
-      </div>
-  
-      <div>
-        <span>Expires</span>
-        <p>22/28</p>
-      </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Monthwise Alacarte History Report</strong> </div>
     </div>
-  
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Addon Package History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong> Package Reference Master Report</strong> </div>
+    </div>
   </div>
+</section>
+<section>
+  <h5>SMARTCARD HISTORY</h5>
+  <div class="cardContainer">
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>Activation History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>Deactivation History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Smartcard Upload Report</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Alacarte Log</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Box Update Report</strong> </div>
+    </div>
+  </div>
+</section>
+<section>
+  <h5>CAS OPERATION HISTORY</h5>
+  <div class="cardContainer">
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>First Time Activation History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-city"></i>
+      <div><strong>Channel Update History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Invertory Upload Report</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Smartcard Update History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Force Tuning History</strong> </div>
+    </div>
+    <div class="card"><i class="fa-solid fa-user"></i>
+      <div><strong>Not Allocated Smartcard</strong> </div>
+    </div>
+  </div>
+</section>
