--- a/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
+++ b/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
@@ -30,10 +30,10 @@
                                         <div class="col-12 col-md-6" *ngIf="isSmartcardEnabled">
                                             <input placeholder="Enter Smartcard" formControlName="intendid" type="text"
                                                 (keypress)="onKeydown($event)" [ngModel]="intendid_1" maxlength="20">
-                                            <div *ngIf="submitted && !intendid" class="text-danger"
+                                            <!-- <div *ngIf="submitted && !intendid_1" class="text-danger"
                                                 style="font-size: small;">
                                                 Indend Id is required
-                                            </div>
+                                            </div> -->
                                             <!-- <div *ngIf="form.get('intendid')?.invalid && form.get('indendid')?.touched">
                                                 <small class="text-danger">Indend Id is required.</small>
                                             </div> -->
@@ -50,10 +50,10 @@
                                                     {{ area.name }}
                                                 </mat-option>
                                             </mat-autocomplete>
-                                            <div *ngIf="submitted && !intendid" class="text-danger"
+                                            <!-- <div *ngIf="submitted && !intendid_1" class="text-danger"
                                                 style="font-size: small;">
                                                 Indend Id is required
-                                            </div>
+                                            </div> -->
                                             <!-- <div *ngIf="form.get('intendid')?.invalid && form.get('indendid')?.touched">
                                                 <small class="text-danger">Indend Id is required.</small>
                                             </div> -->
