--- a/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.scss
+++ b/src/app/admin/features/channel_setting/Reports/history-reports/history-reports.component.scss
@@ -1,71 +1,104 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300&family=Source+Code+Pro:wght@200;300;400&display=swap");
 
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+.display {
+  display: flex;
 }
 
 body {
-  width: 100%;
-  min-height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background: linear-gradient(319deg, #00a1ab, #020112);
-  font-family: "Source Code Pro", monospace;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #31a6f4;
+}
+
+.cardContainer {
+  flex-basis: 95%;
+  padding: 10px 20px;
+  font-family: "Ubuntu", sans-serif;
+  text-transform: capitalize;
+  display: flex;
+  flex-wrap: wrap;
+  // justify-content: space-between;
+  gap: 4%;
 }
 
 .card {
-  width: 400px;
-  height: 250px;
-  border-radius: 20px;
-  background: linear-gradient(120deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/12.jpeg");
-  background-size: cover;
-  padding: 30px;
-  overflow: hidden;
-}
-
-.card .card-head {
-  display: flex;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: white;
+  width: 22%;
+  min-height: 30px;
+  color: grey;
+  margin: 15px 0;
+  box-shadow: 3px 4px 8px 2px rgba(0, 0, 0, 0.5);
+  // display: flex;
+  display: -webkit-inline-box;
   justify-content: space-between;
-  align-items: center;
+  gap: 5%;
 }
 
-.card-head h3 {
-  color: #fff;
-  font-size: 26px;
-}
-
-.card .card-head img {
-  width: 60px;
-}
-.card-no {
+.card div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-basis: 70%;
   text-align: center;
-  margin: 30px auto;
-  color: #fff;
-  letter-spacing: 2px;
-  font-size: 26px;
-  font-weight: bold;
-  text-shadow: 2px -1px 0px #000;
+}
+
+.card i {
+  background: #b3f0ff;
+  color: #00a3cc;
+  border-radius: 50%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  font-family: "Inter", sans-serif;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  padding: 20px;
+  font-size: 25px;
 }
 
-.card-dtl {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff;
+// .card * {
+//   text-wrap: nowrap;
+// }
+.card strong {
+  color: black;
+  font-weight: 400;
+  font-size: 16px;
+}
+h5{
+  padding: 0.5rem;
+  background-color: #e5f0f0;
+  border: 2px solid lightgray;
+}
+@media (max-width: 850px) {
+  .cardContainer {
+    justify-content: space-between;
+    gap: unset;
+  }
+
+  .card {
+    width: 49%;
+  }
+
+  .display {
+    display: block;
+  }
 }
 
-.card-dtl span {
-  font-size: 14px;
+@media (max-width: 400px) {
+  .cardContainer {
+    justify-content: center;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  .display {
+    display: block;
+  }
 }
 
-.card-dtl p {
-  font-size: 18px;
-}
+/*         //  حذيفة، المغرب،العيون */
