--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -12,9 +12,9 @@
                 </div>
                 <div class="col-12 col-md-8">
                     <mat-form-field appearance="outline" style="width: 100%;">
-                        <mat-date-range-input [rangePicker]="picker" [max]="maxDate">
-                            <input matStartDate matInput placeholder="Start date" (dateChange)="getFromDate($event)">
-                            <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)">
+                        <mat-date-range-input [rangePicker]="picker" >
+                            <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate" (dateChange)="getFromDate($event)">
+                            <input matEndDate matInput placeholder="End date" [(ngModel)]="todate" (dateChange)="getToDate($event)">
                         </mat-date-range-input>
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-date-range-picker #picker></mat-date-range-picker>
